src/style.css
/* ... */
.init .buble:nth-child(6){
  width: var(--middle-buble);
  height: var(--middle-buble);
  left: 70%;
  bottom: 5%;
  animation-delay: 1.2s;
}

.init .buble:nth-child(7){
  width: var(--min-buble);
  height: var(--min-buble);
  left: -10%;
  bottom: -35%;
  animation-delay: 1.4s;
}
.init .buble:nth-child(8){
  width: var(--min-buble);
  height: var(--min-buble);
  left: 0%;
  bottom: -31%;
  animation-delay: 1.6s;
}
.init .buble:nth-child(9){
  width: var(--min-buble);
  height: var(--min-buble);
  left: 6%;
  bottom: -38%;
  animation-delay: 1.8s;
}

.init .buble:nth-child(10){
  width: var(--min-buble);
  height: var(--min-buble);
  left: 49%;
  bottom: 15%;
  animation-delay: 2.0s;
}
.init .buble:nth-child(11){
  width: var(--min-buble);
  height: var(--min-buble);
  left: 50%;
  bottom: 23%;
  animation-delay: 2.2s;
}
.init .buble:nth-child(12){
  width: var(--min-buble);
  height: var(--min-buble);
  left: 59%;
  bottom: 16%;
  animation-delay: 2.4s;
}

@keyframes bubles {
  0%{
    transform: rotate(0deg); 
    opacity: 1;
  }
  20%{
    transform: rotate(120deg); 
    opacity: 0.6;
  }
  80%{
    transform: translateX(240deg); 
    opacity: 0.6;
  }
  100%{
    transform: translateX(360deg); 
    opacity: 1;
  }
}
*/

/* sign In */
.signin{
  width: 100%;
  height: 100%;
  padding: 10px 10px 10px 10px;
	/* background-image: url(assets/signin.png); */
	background-size: 100% 100%;
	display: grid;
  height: fit-content;
  justify-content: center;
	/* grid-template-rows: 3fr 1fr 2fr 1fr 1fr 1fr; */
}

.signin .link{
  justify-self: end;
  display: flex;
  flex-direction: row-reverse;
  margin-right: 25px;
  /* border: solid 1px var(--contrast-color); */
}

.signin .google{
  margin-left: 15px;
  border-radius: 0;
  border-top: 1px solid;
  border-top-color: var(--principal-letter-color);
  border-top-style: dashed;
}

.signin .google, .signin .github{
  margin-left: 15px;
  border-radius: 0;
  border-bottom: 1px solid;
  border-bottom-color: var(--principal-letter-color);
  border-bottom-style: dashed;
}

/* sign Up */
.signup{
  width: 100%;
  height: 100%;
  margin: 15px 0 15px 0;
  padding: 10px 10px 10px 10px;
	/* background-image: url(assets/signup.png); */
	background-size: 100% 100%;
	display: grid;
	/* grid-template-rows: 1fr 4fr 1fr 3fr 1fr 1fr 1fr; */
  height: fit-content;
  align-self: center;
  justify-self:center;
  justify-content: center;
}

.signup .sec-figure{
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}

.signup .sec-figure button{
  min-width: 27px;
  max-width: 27px;
  height: 30px;
  justify-content: center;
  align-content: center;
  align-self: center;
  margin: 0;
}

.signup .sec-figure button[name='left']{
  justify-self: end;
}

.signup .sec-figure button[name='right']{
  justify-self: start;
}

.signup figure{
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
}

.signup caption{
  background: transparent;
  color: transparent;
  height: 30px;
  position: relative;
  bottom: -55%;
  right: 100%;
}

.signup #imgUrl::file-selector-button{
  border-radius: 7px 7px 7px 7px;
  line-height: 20px;
  background: var(--main-color);
  position: relative;
  bottom: 50%;
  right: 10%;
}

/* recover password */
.pass{
  width: 100%;
  height: 100%;
  padding: 10px 10px 10px 10px;
	/* background-image: url(assets/password.png); */
	background-size: 100% 100%;
	display: grid;
  height: fit-content;
  justify-content: center;
}

/* mix */
.signin img, .signup img, .pass img{
	background: transparent;
  width: 100%;
  height: 100%;
  /* grid-template-rows: 3fr 1fr 1fr; */
}

.home{
  height: fit-content;
}

/* Feed */
.feed{
  /* background-image: url(assets/feed.png); */
  background-size: 100% 100%;
  /* padding: 20px 20px 20px 20px; */
  width: 100%;
  height: calc(100% - 70px);
}

/* Feed */
.posts{
  background-image: url(assets/posts.png);
  background-size: 100% 100%;
  padding: 20px 20px 20px 20px;
  width: 100%;
  height: calc(100% - 70px);
}

.search{
  background-image: url(assets/search.png);
  background-size: 100% 100%;
  width: 100%;
  height: calc(100% - 70px);
}

.profile{
  background-image: url(assets/profile.png);
  background-size: 100% 100%;
  width: 100%;
  height: calc(100% - 70px);
}

.navigation {
	position: fixed;
  bottom: 0%;
  left: 0%;
  display: grid;
	width: 100%;
	height: 70px;
	background: var(--main-color);
	/* display: flex; */
	justify-content: center;
	align-items: center;
	/* border-radius: 7px; */
}

.navigation ul {
	background: var(--main-color);
	width: 360px;
	display: flex;
	/* align-items: center; */
}


.navigation ul li {
  background: var(--main-color);
  list-style: none;
	position: relative;
	width: 72px; /* ul: width 360 / 5 = 72 */
	height: 70px;
	z-index: 2;
  align-content: center;
  justify-content: center;
}

.navigation ul li a {
	text-decoration: none;
  /* align-self: center;
  justify-self: center; */
  /* background: var(--main-color); */
	/* position: relative; */
	/* justify-content: center; */
  /* align-content: center; */
  /* display: flex; */
	/* width: 100%; */
	/* height: 100%; */
}

.navigation ul li a .icon {
	display:flex;
	width: 55px;
	height: 55px;
	text-align: center;
	line-height: 70px;
	border-radius: 50%;
  position: relative;
  bottom: 16%;
  left: -5%;
	/* color: #222327; */
	/* font-size: 1.5em; */
	transition: 0.5s;
	transition-delay: 0s;
  background: var(--main-color);
}

.navigation ul li.active a .icon {
	/* background: var(--clr); */
	background: var(--main-color);
  /* color: #fff; */
	transform: translateY(-30px);
	transition-delay: 0.25s;
  border: solid 2px var(--accompanying-color);
	/* border-radius: 50%; */
}

.navigation ul li a .icon:before {
	content: '';
	position: absolute;
	top: 10px;
	left: 20px;
	width: 100%;
	height: 100%;
	background: var(--contrast-color);
	border-radius: 50%;
	filter: blur(5px);
	opacity: 1;
	transition: .5s;
	transition-delay: 0.15s;
}
/* ... */

